[package]
name = "isek_item_spawner"
version = "0.1.0"
#authors = "Jodi"
edition = "2018"

[package.metadata.skyline]
titleid = "010021C000B6A000"

[lib]
crate-type = ["cdylib"]

[dependencies]
#bindgen = "0.59.2"
lazy_static = "1.4.0"
nnsdk = "0.1.0"
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
